--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,8 @@
 {
+  "buildCommand": "cd apps/web && npm run build",
+  "outputDirectory": "apps/web/.next",
+  "installCommand": "npm install",
+  "framework": "nextjs",
   "crons": [
     {
       "path": "/api/bot/cron",
