loomybot name will appear now

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -21,5 +21,14 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT_URI=http://localhost:3000/api/youtube/callback
 
+# Bot Account (Create a separate YouTube channel for the bot)
+# Instructions:
+# 1. Create a new YouTube channel (e.g., "Looomy Bot")
+# 2. Go through OAuth flow to get the refresh token
+# 3. Add this bot account as a moderator to each streamer's channel
+BOT_YOUTUBE_REFRESH_TOKEN=
+NEXT_PUBLIC_BOT_CHANNEL_NAME=Looomy
+NEXT_PUBLIC_BOT_CHANNEL_URL=https://www.youtube.com/@looomybot
+
 # Bot Polling Secret (generate a random string)
 BOT_POLL_SECRET=
