--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,7 +7,10 @@
     "build": "prisma generate --schema=../../packages/database/prisma/schema.prisma && next build",
     "postinstall": "prisma generate --schema=../../packages/database/prisma/schema.prisma",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run"
   },
   "dependencies": {
     "@clerk/nextjs": "^5.0.0",
@@ -31,6 +34,8 @@
     "next": "^14.2.0",
     "openai": "^4.0.0",
     "pdf-parse": "^1.1.1",
+    "pino": "^10.1.0",
+    "pino-pretty": "^13.1.2",
     "postcss": "^8.4.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
@@ -44,9 +49,11 @@
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@vitest/ui": "^4.0.13",
     "eslint": "^8.0.0",
     "eslint-config-next": "^14.0.0",
     "prisma": "^5.0.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "vitest": "^4.0.13"
   }
 }
