waitlist and beta access control added

--- a/.env.example
+++ b/.env.example
@@ -33,5 +33,9 @@ NEXT_PUBLIC_BOT_CHANNEL_URL=https://www.youtube.com/@looomybot
 # Bot Polling Secret (generate a random string)
 BOT_POLL_SECRET=
 
+# Beta Access Control
+# Secret key required to access sign-in page during private beta
+BETA_ACCESS_KEY=
+
 # QStash Token
 QSTASH_TOKEN=
