--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@clerk/nextjs": "^5.0.0",
     "@clerk/themes": "^2.4.39",
     "@pinecone-database/pinecone": "^2.0.0",
-    "@prisma/client": "^5.22.0",
+    "@prisma/adapter-pg": "^7.1.0",
+    "@prisma/client": "^7.1.0",
     "@radix-ui/react-dialog": "^1.0.0",
     "@radix-ui/react-dropdown-menu": "^2.0.0",
     "@radix-ui/react-label": "^2.0.0",
@@ -41,6 +42,7 @@
     "next": "^14.2.0",
     "openai": "^4.0.0",
     "pdf-parse": "^1.1.1",
+    "pg": "^8.16.3",
     "pino": "^10.1.0",
     "pino-pretty": "^13.1.2",
     "postcss": "^8.4.0",
@@ -59,7 +61,7 @@
     "@vitest/ui": "^4.0.13",
     "eslint": "^8.0.0",
     "eslint-config-next": "^14.0.0",
-    "prisma": "^5.0.0",
+    "prisma": "^7.1.0",
     "typescript": "^5.0.0",
     "vitest": "^4.0.13"
   }
