--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
+    "@types/pg": "^8.15.6",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitest/ui": "^4.0.13",
