refresh token encrypyed

--- a/.env.example
+++ b/.env.example
@@ -33,6 +33,10 @@ NEXT_PUBLIC_BOT_CHANNEL_URL=https://www.youtube.com/@looomybot
 # Bot Polling Secret (generate a random string)
 BOT_POLL_SECRET=
 
+# Encryption Key for sensitive data (generate with: openssl rand -base64 32)
+# Used to encrypt YouTube refresh tokens at rest
+ENCRYPTION_KEY=
+
 # Beta Access Control
 # Secret key required to access sign-in page during private beta
 BETA_ACCESS_KEY=
